--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,37 @@
 {
-    "redirects": [
-      {
-        "source": "/(.*)",
-        "has": [
-          {
-            "type": "host",
-            "value": "artisticworks.xyz"
-          }
-        ],
-        "destination": "https://www.artisticworks.xyz/$1",
-        "permanent": true
-      }
-    ],
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ],
-    "headers": [
-      {
-        "source": "/(.*)",
-        "headers": [
-          { "key": "Cache-Control", "value": "s-maxage=1, stale-while-revalidate" }
-        ]
-      }
-    ]
-  }
+  "version": 2,
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "artisticworks.xyz"
+        }
+      ],
+      "destination": "https://www.artisticworks.xyz/$1",
+      "permanent": true
+    }
+  ],
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Cache-Control", "value": "s-maxage=1, stale-while-revalidate" }
+      ]
+    }
+  ]
+}
