Fix Vercel config: use src/dest in routes section

--- a/vercel.json
+++ b/vercel.json
@@ -15,12 +15,12 @@
   ],
   "routes": [
     {
-      "source": "/",
-      "destination": "/index.html"
+      "src": "/",
+      "dest": "/index.html"
     },
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "rewrites": [
