--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,15 @@
   ],
   "headers": [
     {
+      "source": "/artistic_a.png",
+      "headers": [
+        { 
+          "key": "Cache-Control", 
+          "value": "no-cache, no-store, must-revalidate" 
+        }
+      ]
+    },
+    {
       "source": "/(.*)",
       "headers": [
         { 
