--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/jersey-25": "^5.2.5",
     "@fontsource/nanum-gothic-coding": "^5.2.5",
+    "@fontsource/permanent-marker": "^5.2.5",
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
