Add Vercel Analytics component to track site usage

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/jersey-25": "^5.2.5",
     "@fontsource/nanum-gothic-coding": "^5.2.5",
     "@fontsource/permanent-marker": "^5.2.5",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
