feat: update font system with new typefaces - Add new fonts (Reenie Beanie, Rock Salt, etc.) - Configure Tailwind with new font families - Update font loading in index.css

--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fontsource/jersey-25": "^5.2.5",
+    "@fontsource-variable/geist-mono": "^5.2.6",
+    "@fontsource-variable/phudu": "^5.2.7",
+    "@fontsource/londrina-solid": "^5.2.5",
     "@fontsource/nanum-gothic-coding": "^5.2.5",
+    "@fontsource/nanum-pen-script": "^5.2.5",
     "@fontsource/permanent-marker": "^5.2.5",
+    "@fontsource/reenie-beanie": "^5.2.5",
+    "@fontsource/rock-salt": "^5.2.5",
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
+    "install": "^0.13.0",
+    "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
