Fix font loading and update Sidebar component
- Remove manual @font-face definitions from CSS to fix font decode errors
- Use @fontsource imports in main.jsx for proper font loading with Vite
- Update Sidebar component with font-justme class and improved text sizing
- Add responsive text sizing for better mobile/desktop experience
- Consolidate duplicate paragraph elements in Sidebar
- Move cartoon_tack.png to public/images/ directory
- Clean up spacing and formatting

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@fontsource-variable/geist-mono": "^5.2.6",
     "@fontsource-variable/phudu": "^5.2.7",
-    "@fontsource/londrina-solid": "^5.2.5",
+    "@fontsource/just-me-again-down-here": "^5.2.6",
+    "@fontsource/mynerve": "^5.2.6",
     "@fontsource/nanum-gothic-coding": "^5.2.5",
-    "@fontsource/nanum-pen-script": "^5.2.5",
     "@fontsource/permanent-marker": "^5.2.5",
-    "@fontsource/reenie-beanie": "^5.2.5",
     "@fontsource/rock-salt": "^5.2.5",
+    "@fontsource/walter-turncoat": "^5.2.6",
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "install": "^0.13.0",
